fix(css): gap between linenumbers and codes

--- a/assets/sass/cheep.scss
+++ b/assets/sass/cheep.scss
@@ -212,6 +212,7 @@ p ~ {
   }
 
   .highlight {
+    line-height: 1em;
     margin-left: 2em;
     padding: 0.5ex;
     background: var(--pre_bgcolor); //#f7f7f7;
